<?xml version="1.0" encoding='utf-8' standalone='no'?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">OBDTesting</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login">Login</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="driver_name">Driver Name</string>
    <string name="mileage">Mileage</string>
    <string name="rpm_guage">RPM</string>
    <string name="engine_temp_guage">Engine Temp</string>
    <string name="speed_guage">SPEED</string>
    <string name="destination_txt_view">Destination</string>
    <string name="btn_start_trip">Start Trip</string>
    <string name="nav_header_desc">NAV HEADER DESC</string>
    <string name="nav_header_title">NAV HEADER TITLE</string>
    <string name="nav_header_subtitle">NAV HEADER SUBTITLE</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="shared_pref_user_count">DriverCount</string>
    <string name="shared_pref_user_data">DriverData</string>
    <string name="json_objects">JSONOBJECTS</string>
    <string name="title_activity_home">OBD Driver</string>
    <string name="title_activity_maps">Maps Activity</string>
    <string name="application_name">SmartDr!ve</string>
    <string name="publication">Publications</string>
    <string name="paper1">\u2022 Paper Number 1</string>
    <string name="paper2">\u2022 Paper Number 2</string>
    <string name="broker_url">Enter MQTT IP address</string>
    <string name="about_us_para">    \u2022 We are Students of AISSMS IOIT who believed cause for humanity.\n    \u2022 We have developed an Drive Assistance application to reduce the number of accidents happens every year.</string>
    <string name="project_members">Project Members</string>
    <string name="name_tejas_gadsing">Tejas Gadsing</string>
    <string name="string_user">User</string>
    <string name="tejas_email">tejasgadsing@gmail.com</string>
    <string name="name_satyajeet_kudalkar">Satyajeet Kudalkar</string>
    <string name="email_satya">kudalkarsatyajeet@gmail.com</string>
    <string name="name_prashant_salunkhe">Prashant Salunkhe</string>
    <string name="email_parshya">psalunkhe158@gmail.com</string>
    <string name="name_amol_chaudhary">Amol Chaudhary</string>
    <string name="email_amol">amolchaudhary000@gmail.com</string>
    <string name="github_repository">GitHub Repository</string>
</resources>