<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:orientation="vertical"
    android:background="@drawable/bk1"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/driver_logo"
        />


    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/username_logo"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingLeft="2dp" />

    <EditText
        android:id="@+id/edittext_driver_name"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/username_logo"
        android:hint="@string/driver_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edittext_vehicle_no"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/car_icon"
        android:hint="@string/vehicle_number"/>


    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/email_icon"
        android:hint="@string/email_id"/>
    <EditText
        android:id="@+id/edittext_mobile_no"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/mobile_icon"
        android:hint="@string/mobile_number"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/pass_logo"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/pass_logo"
        android:hint="@string/confirm_password"/>

    <Button
        android:id="@+id/button_signup"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:background="#21a1ff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#21a1ff"
            android:text="@string/login" />

    </LinearLayout>

</LinearLayout>