<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_iconfinder_home"
            android:title="@string/menu_home" />
        <!--<item-->
            <!--android:id="@+id/nav_history"-->
            <!--android:icon="@drawable/ic_iconfinder_history"-->
            <!--android:title="@string/menu_history" />-->
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_iconfinder_exit"
            android:title="@string/menu_logout" />
    </group>

    <item android:title="About">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_iconfinder_about"
                android:title="@string/menu_about_us" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_iconfinder_contat_us"
                android:title="@string/menu_contact_us" />
        </menu>
    </item>

</menu>
