<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bk1">
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/driver_logo"
        />


    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="2dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/username_logo"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/pass_logo"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:background="#21a1ff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#21a1ff"
            android:text="@string/register" />

    </LinearLayout>


</LinearLayout>