<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactFragment"
    android:background="@drawable/about_us_backg"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_name"
        android:textSize="52sp"
        android:drawableStart="@mipmap/ic_launcher_foreground"
        android:textColor="#e0e0e0"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="40sp"
        android:text="@string/project_members"
        android:textAlignment="center"
        android:textColor="#e0e0e0"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:text="@string/name_tejas_gadsing"
        android:textAlignment="center"
        android:textColor="#6bc3e0"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/tejas_email"
        android:textAlignment="center"
        android:textColor="#6bc3e0"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_iconfinder_facebook_313103"
            android:contentDescription="TODO"
            android:layout_marginEnd="10dp"
            android:id="@+id/tejas_fb"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_iconfinder_social_02_1270806"
            android:tint="#3a5ba0"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:contentDescription="TODO"
            android:id="@+id/tejas_call"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:text="@string/name_satyajeet_kudalkar"
        android:textAlignment="center"
        android:textColor="#e0e0e0"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/email_satya"
        android:textAlignment="center"
        android:textColor="#e0e0e0"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/satya_fb"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_iconfinder_facebook_313103"
            android:contentDescription="TODO"
            android:layout_marginEnd="10dp"
            />
        <ImageView
            android:id="@+id/satya_call"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_iconfinder_social_02_1270806"
            android:tint="#3a5ba0"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:contentDescription="TODO"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:text="@string/name_prashant_salunkhe"
        android:textAlignment="center"
        android:textColor="#6bc3e0"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/email_parshya"
        android:textAlignment="center"
        android:textColor="#6bc3e0"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/parshya_fb"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_iconfinder_facebook_313103"
            android:contentDescription="TODO"
            android:layout_marginEnd="10dp"
            />
        <ImageView
            android:id="@+id/parshya_call"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_iconfinder_social_02_1270806"
            android:tint="#3a5ba0"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:contentDescription="TODO"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:text="@string/name_amol_chaudhary"
        android:textAlignment="center"
        android:textColor="#e0e0e0"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/email_amol"
        android:textAlignment="center"
        android:textColor="#e0e0e0"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/amol_fb"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_iconfinder_facebook_313103"
            android:contentDescription="TODO"
            android:layout_marginEnd="10dp"
            />
        <ImageView
            android:id="@+id/amol_call"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_iconfinder_social_02_1270806"
            android:tint="#3a5ba0"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:contentDescription="TODO"
            />
    </LinearLayout>
</LinearLayout>