<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/smoke"
    android:orientation="vertical"
    tools:context=".GaugeActivity">

    <com.github.anastr.speedviewlib.PointerSpeedometer
        android:id="@+id/speedometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="9dp"
        android:alpha="0.86"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/engineTemp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        app:layout_constraintVertical_chainStyle="packed"
        app:sv_backgroundCircleColor="#2D2D2D"
        app:sv_indicatorLightColor="#1842D1"
        app:sv_markColor="#1842D1"
        app:sv_maxSpeed="255"
        app:sv_minSpeed="0"
        app:sv_pointerColor="#1842D1"
        app:sv_speedTextColor="#1842D1"
        app:sv_withIndicatorLight="true" />

    <com.github.anastr.speedviewlib.PointerSpeedometer
        android:id="@+id/rpmSpeedometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="7dp"
        android:alpha="0.86"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:sv_backgroundCircleColor="#2D2D2D"
        app:sv_indicatorLightColor="#1842D1"
        app:sv_markColor="#1842D1"
        app:sv_maxSpeed="16384"
        app:sv_minSpeed="0"
        app:sv_pointerColor="#1842D1"
        app:sv_speedTextColor="#1842D1"
        app:sv_unit="RPM"
        app:sv_withIndicatorLight="true" />

    <com.github.anastr.speedviewlib.PointerSpeedometer
        android:id="@+id/engineTemp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="40dp"
        android:alpha="0.86"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003"
        app:sv_backgroundCircleColor="#2D2D2D"
        app:sv_indicatorLightColor="#1842D1"
        app:sv_markColor="#1842D1"
        app:sv_maxSpeed="215"
        app:sv_minSpeed="-40"
        app:sv_pointerColor="#1842D1"
        app:sv_speedTextColor="#1842D1"
        app:sv_speedTextSize="10dp"
        app:sv_textSize="8dp"
        app:sv_unit="\u00B0 C"
        app:sv_unitTextSize="10dp"
        app:sv_withIndicatorLight="true"
        app:sv_withTremble="false" />

    <TextView
        android:id="@+id/milage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="36dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/engineTemp"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/mileage"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/milage"
        app:layout_constraintStart_toStartOf="@+id/engineTemp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="113dp"
        android:text="@string/rpm_guage"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/engineTemp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rpmSpeedometer" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/engine_temp_guage"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/engineTemp"
        app:layout_constraintStart_toStartOf="@+id/engineTemp"
        app:layout_constraintTop_toBottomOf="@+id/engineTemp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="138dp"
        android:text="@string/speed_guage"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/engineTemp"
        app:layout_constraintTop_toBottomOf="@+id/speedometer" />
</LinearLayout>